log/build_2022-10-15_15-15-43/robo_miner_ai_py/stderr.log
  File "/home/ubuntu/workspace/Velizar/robotics_v1/install/robo_miner_ai_py/lib/python3.8/site-packages/robo_miner_ai_py/robo_miner_ai.py", line 61
    kwargs['cur_pos'].[0],
                      ^
SyntaxError: invalid syntax

